# centum

./: .buildinfo  .gitignore  README.md  centum_getting_start.html  concepts.html  download.html  environment.yml  genindex.html  getting_start.html  index.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  py-modindex.html  requirements_doc.txt  search.html  searchindex.js  setup.cfg  sg_execution_times.html  test_env_centum.yml
.github/workflows/: deploy_doc.yml  python-publish.yml
.virtual_documents/docs/: centum_getting_start.ipynb
_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb
_sources/: centum_getting_start.ipynb  download.ipynb  index.md  intro.md
_sources/auto_examples/: Aquacrop.ipynb  Spain.ipynb  index.rst
_sources/tutos/: plot_centum_Tree-Grass.ipynb  plot_centum_Tree_Grass.ipynb  plot_centum_delineate_AQUACROP.ipynb
api/: centum.html
api/_autosummary/: centum.accounting.html  centum.html  (+4 more)
auto_examples/: Aquacrop.html  Spain.html  index.html  sg_execution_times.html
centum/: __init__.py  accounting.py  delineation.py  irrigation_district.py  plotting.py  utils.py
docs/: _config.yml  _toc.yml  concepts.md  conf.py  download.ipynb  getting_start.ipynb  notebooks.ipynb  references.bib  test_centum.py
examples/: README.txt  Spain.py
tutos/: plot_centum_Tree-Grass.html  plot_centum_Tree_Grass.html  plot_centum_delineate_AQUACROP.html  plot_centum_delineate_POC.html
(+101 files in other folders)
