[metadata]
name = centum
version = 0.1
description = A Python package for water accounting using energy and water balance modeling.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/centum
license = GNU General Public License v3.0
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3.0 (GPL-3.0)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
