[metadata]
name = centum
version = 0.1.5
description = A Python package for water accounting using energy and water balance modeling.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/centum
license = GPL-3.0-or-later  # Use the SPDX identifier
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
python_requires = >=3.9
install_requires =
    xarray
    rioxarray
    matplotlib
    pandas
    numpy
    geopandas
